--- a/StudentEnrollment.csproj
+++ b/StudentEnrollment.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="10.0.1" />
         <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="10.0.1" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="10.0.0" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="10.0.1">
@@ -18,7 +19,10 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="Features\" />
+      <Folder Include="Features\Auth\Login\" />
+      <Folder Include="Features\Auth\LogOut\" />
+      <Folder Include="Features\Auth\RefreshToken\" />
+      <Folder Include="Features\Auth\Register\" />
       <Folder Include="Shared\Persistence\Migrations\" />
     </ItemGroup>
 
