--- a/.gitignore
+++ b/.gitignore
@@ -483,5 +483,18 @@ $RECYCLE.BIN/
 # Vim temporary swap files
 *.swp
 
-# Invisible README till project completion 
-README.md
+### Frontend
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+dist
+dist-ssr
+*.local
+
