--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@mantine/core": "^8.3.11",
     "@mantine/dates": "^8.3.11",
+    "@mantine/form": "^8.3.11",
     "@mantine/hooks": "^8.3.11",
     "@mantine/notifications": "^8.3.11",
     "@tanstack/react-query": "^5.90.16",
