--- a/backend/appsettings.Development.json
+++ b/backend/appsettings.Development.json
@@ -1,5 +1,8 @@
 {
-  "AllowedOrigins": [ "http://localhost:5173" ],
+  "AllowedOrigins": [
+    "http://localhost:5173",
+    "https://localhost:5173"
+  ],
   "Logging": {
     "LogLevel": {
       "Default": "Information",
