docs: add production deployment guide and harden security config - Update README.md with a deployment guide - Configure Program.cs to enforce HSTS and HTTPS redirection in non-development environments. - Add AllowedOrigins to appsettings.json same as in  appsettings.Development.json

--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "AllowedOrigins": [
+    "http://localhost:5173",
+    "https://localhost:5173"
+  ],
   "Logging": {
     "LogLevel": {
       "Default": "Information",
